--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,48 +1,53 @@
 # Generated using pip freeze after pip install -r requirements.txt
-# 11.5.2016
-backports-abc==0.4
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.5.0.1
-certifi==2016.2.28
-configparser==3.3.0.post2
+# 2.4.2019
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
 cycler==0.10.0
-decorator==4.0.9
-entrypoints==0.2.1
-functools32==3.2.3.post2
-ipykernel==4.3.1
-ipython==4.2.0
-ipython-genutils==0.1.0
-ipywidgets==5.1.3
-Jinja2==2.8
-jsonschema==2.5.1
+decorator==4.4.0
+defusedxml==0.5.0
+entrypoints==0.3
+ipykernel==5.1.0
+ipython==7.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+jedi==0.13.3
+Jinja2==2.10
+jsonschema==3.0.1
 jupyter==1.0.0
-jupyter-client==4.2.2
-jupyter-console==4.1.1
-jupyter-core==4.1.0
-MarkupSafe==0.23
-matplotlib==1.5.1
-mistune==0.7.2
-nbconvert==4.2.0
-nbformat==4.0.1
-networkx==1.11
-notebook==4.2.0
-numpy==1.11.0
-pandas==0.18.1
-pathlib2==2.1.0
-pexpect==4.0.1
-pickleshare==0.7.2
-ptyprocess==0.5.1
-Pygments==2.1.3
-pyparsing==2.1.3
-python-dateutil==2.5.3
-pytz==2016.4
-pyzmq==15.2.0
-qtconsole==4.2.1
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-terminado==0.6
-tornado==4.3
-traitlets==4.2.1
-wheel==0.24.0
-widgetsnbextension==1.2.2
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+MarkupSafe==1.1.1
+matplotlib==3.0.3
+mistune==0.8.4
+nbconvert==5.4.1
+nbformat==4.4.0
+networkx==2.2
+notebook==5.7.8
+numpy==1.16.2
+pandas==0.24.2
+pandocfilters==1.4.2
+parso==0.3.4
+pexpect==4.6.0
+pickleshare==0.7.5
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+Pygments==2.3.1
+pyparsing==2.3.1
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2018.9
+pyzmq==18.0.1
+qtconsole==4.4.3
+Send2Trash==1.5.0
+six==1.12.0
+terminado==0.8.2
+testpath==0.4.2
+tornado==6.0.2
+traitlets==4.3.2
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
